# SM2-CPP-Implementation

./: .gitignore  CMakeLists.txt  README.md  install_miracl.sh
include/: precision.h  sm2.h  sm3.h
src/sm2/: inner_utils.cpp  inner_utils.h  sm2_enc.cpp  sm2_enc.h  sm2_sign.cpp  sm2_sign.h  utils.cpp  utils.h
src/sm3/: sm3_miracl_wrapper.cpp  sm3_miracl_wrapper.h  sm3_reference.cpp  sm3_reference.h
test/: test_miracl_env.cpp
test/sm2/: test_sm2.cpp  test_utils.cpp
test/sm3/: test_sm3.cpp
